gccida/g3/get_mode_alignment
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/get_mode_alignment/src/rtl.c:935:35: error: must use 'enum' tag to refer to type 'machine_mode'
unsigned int  get_mode_alignment( machine_mode mode) 
                                  ^
                                  enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/get_mode_alignment/src/rtl.c:940:38: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + ( int)mode) - 5) <= 1 ) 
                                     ^~~~~~~~~~~~
                                     mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/get_mode_alignment/src/rtl.c:130:23: note: 'mode_class' declared here
const enum mode_class mode_class[NUM_MACHINE_MODES] = {
                      ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/get_mode_alignment/src/obj/rtl.o] Error 1
